add-commit added!!!

--- a/TabibYab/res/layout/add_clinic.xml
+++ b/TabibYab/res/layout/add_clinic.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:textSize="24sp" />
     <Button
-        android:id="@+id/select_point_button"
+        android:id="@+id/add_point_on_map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
