--- a/TabibYab/res/menu/main.xml
+++ b/TabibYab/res/menu/main.xml
@@ -19,5 +19,13 @@
         android:enabled="true"
         android:showAsAction="always" 
         android:visible="true"></item>
+    
+    <item android:id="@+id/action_search"
+          android:title="@string/action_search"
+          android:icon="@drawable/ic_action_search"
+          android:showAsAction="ifRoom|collapseActionView"
+          android:actionViewClass="android.widget.SearchView" />
+    
+    
 
 </menu>
