--- a/TabibYab/res/layout/info_window_layout.xml
+++ b/TabibYab/res/layout/info_window_layout.xml
@@ -46,6 +46,8 @@
         android:id="@+id/rating"
         style="@style/appleRatingBar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:isIndicator="true"
+        android:maxHeight="80dp" />
 
 </LinearLayout>
