--- a/TabibYab/res/menu/main.xml
+++ b/TabibYab/res/menu/main.xml
@@ -9,12 +9,12 @@
     <item 
         android:id="@+id/clinicListView"
         android:icon="@drawable/ic_action_view_as_list" 
-        android:title="List View" 
+        android:title="@string/show_as_list" 
         android:enabled="true"
         android:showAsAction="always" 
         android:visible="true"></item>
     <item android:id="@+id/addClinicButton" 
-        android:title="AddClinic"
+        android:title="@string/add_clinic_activity"
         android:icon="@drawable/ic_action_new_label"  
         android:enabled="true"
         android:showAsAction="always" 
