--- a/TabibYab/res/layout/add_comment.xml
+++ b/TabibYab/res/layout/add_comment.xml
@@ -37,7 +37,7 @@
     android:text="@string/add_comment" />
 
 <TextView
-    android:id="@+id/textView1"
+    android:id="@+id/docSpeciality"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignRight="@+id/add_main_comment"
