--- a/TabibYab/res/layout/filter_dialog.xml
+++ b/TabibYab/res/layout/filter_dialog.xml
@@ -11,15 +11,30 @@
         android:layout_gravity="center_horizontal"
         android:text="@string/vicinity_of" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <CheckBox
+            android:id="@+id/search_current_location_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:checked="true"
+            android:text="@string/current_location" />
+
     <EditText
         android:id="@+id/vicinityOfAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:enabled="false"
         android:inputType="textPostalAddress" >
 
         <requestFocus />
     </EditText>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/distant_from_me_label"
@@ -34,40 +49,40 @@
         android:orientation="horizontal" >
 
         <ToggleButton
-            android:id="@+id/lessThan1kmButton"
+            android:id="@+id/lessThan2point5kmButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/less_than_1km"
-            android:textOff="@string/less_than_1km"
-            android:textOn="@string/less_than_1km" />
+            android:text="@string/less_than_2.5km"
+            android:textOff="@string/less_than_2.5km"
+            android:textOn="@string/less_than_2.5km" />
 
         <ToggleButton
-            android:id="@+id/lessThan2kmButton"
+            android:id="@+id/lessThan5kmButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/less_than_2km"
-            android:textOff="@string/less_than_2km"
-            android:textOn="@string/less_than_2km" />
+            android:text="@string/less_than_5km"
+            android:textOff="@string/less_than_5km"
+            android:textOn="@string/less_than_5km" />
 
         <ToggleButton
-            android:id="@+id/lessThan3kmButton"
+            android:id="@+id/lessThan10kmButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/less_than_3km"
-            android:textOff="@string/less_than_3km"
-            android:textOn="@string/less_than_3km" />
+            android:text="@string/less_than_10km"
+            android:textOff="@string/less_than_10km"
+            android:textOn="@string/less_than_10km" />
 
         <ToggleButton
-            android:id="@+id/lessThan4kmButton"
+            android:id="@+id/lessThan20kmButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/less_than_4km"
-            android:textOff="@string/less_than_4km"
-            android:textOn="@string/less_than_4km" />
+            android:text="@string/less_than_20km"
+            android:textOff="@string/less_than_20km"
+            android:textOn="@string/less_than_20km" />
         
     </LinearLayout>
 
@@ -84,14 +99,19 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/specialityTextViewDialog"
+        android:id="@+id/specialityTextViewFilterDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/clinic_speciality" />
 
     <Spinner
-        android:id="@+id/specialitySpinner"
+        android:id="@+id/specialityLevelSpinnerFilterDialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Spinner
+        android:id="@+id/specialitySpinnerFilterDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
