--- a/TabibYab/res/menu/list_view_menu.xml
+++ b/TabibYab/res/menu/list_view_menu.xml
@@ -26,6 +26,12 @@
           android:showAsAction="ifRoom|collapseActionView"
           android:actionViewClass="android.widget.SearchView" />
     
+    <item android:id="@+id/action_refresh_list"
+          android:title="@string/action_refresh"
+          android:icon="@drawable/ic_action_refresh"
+          android:showAsAction="ifRoom"
+    />
+    
     
 
 </menu>
