add_phone added! (whitout test!!!) and base for image upload

--- a/TabibYab/res/menu/main.xml
+++ b/TabibYab/res/menu/main.xml
@@ -11,21 +11,20 @@
         android:icon="@drawable/filter" 
         android:title="@string/show_as_list" 
         android:enabled="true"
-        android:showAsAction="always" 
-        
+        android:showAsAction="ifRoom"
         android:visible="true"></item>
     <item 
         android:id="@+id/clinicListView"
         android:icon="@drawable/ic_action_view_as_list" 
         android:title="@string/show_as_list" 
         android:enabled="true"
-        android:showAsAction="always" 
+        android:showAsAction="always"
         android:visible="true"></item>
     <item android:id="@+id/addClinicButton" 
         android:title="@string/add_clinic_activity"
         android:icon="@drawable/ic_action_new_label"  
         android:enabled="true"
-        android:showAsAction="always" 
+        android:showAsAction="ifRoom"
         android:visible="true"></item>
     
     <item android:id="@+id/action_search"
