--- a/TabibYab/res/layout/info_window_layout.xml
+++ b/TabibYab/res/layout/info_window_layout.xml
@@ -49,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:isIndicator="true"
-        android:maxHeight="80dp" />
+        android:maxHeight="80dp"
+        android:minHeight="32dp" />
 
 </LinearLayout>
