--- a/TabibYab/res/layout/doctor_list_view_row.xml
+++ b/TabibYab/res/layout/doctor_list_view_row.xml
@@ -41,8 +41,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/doctor_list_view_name"
+        android:layout_below="@+id/doctor_list_view_name"
         android:isIndicator="true"
-        android:layout_below="@+id/doctor_list_view_name" />
+        android:minHeight="32dp" />
 
     <TextView
         android:id="@+id/doctor_list_view_speciality"
