--- a/TabibYab/res/layout/doctor_info.xml
+++ b/TabibYab/res/layout/doctor_info.xml
@@ -1,70 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
     <FrameLayout
+        android:id="@+id/frameLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="fill_vertical"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/bg">
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg" >
 
-        <TextView
-            android:id="@+id/doctor_name"
-            android:layout_width="138dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="85dp"
-            android:layout_marginRight="10dp"
-            android:text="@string/clinic_name"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+        <QuickContactBadge
+            android:id="@+id/imgContact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true" />
 
         <RatingBar
             android:id="@+id/ratingBar"
             style="@style/appleRatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/doctor_name"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="95dp"
-            android:layout_marginTop="35dp" />
+            android:layout_below="@+id/doctor_name"
+            android:layout_toLeftOf="@+id/imgContact"
+            android:clickable="false"
+            android:duplicateParentState="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:isIndicator="true"
+            android:longClickable="false"
+            android:minHeight="32dip" />
 
-        <Button
-            android:id="@+id/cmntBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="100dp"
-            android:text="@string/Comments_View" />
-
-        <QuickContactBadge
-            android:id="@+id/imgContact"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right" />
+        <TextView
+            android:id="@+id/doctor_name"
+            android:layout_width="138dp"
+            android:layout_height="40dp"
+            android:layout_toLeftOf="@+id/imgContact"
+            android:text="@string/clinic_name"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
             android:id="@+id/docSpeciality"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="80dp"
-            android:layout_marginTop="70dp"
+            android:layout_alignRight="@+id/ratingBar"
+            android:layout_below="@+id/ratingBar"
             android:text="@string/speciality"
             android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <Button
+            android:id="@+id/cmntBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/docSpeciality"
+            android:layout_centerHorizontal="true"
+            android:text="@string/Comments_View" />
+
+        <ImageButton
+            android:id="@+id/favorite_button"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:adjustViewBounds="true"
+        	android:scaleType="fitCenter"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="19dp"
+            android:src="@drawable/favorites_icon_gray" />
+
+		</RelativeLayout>
     </FrameLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="138dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_alignLeft="@+id/frameLayout1"
+        android:layout_alignRight="@+id/frameLayout1"
+        android:layout_centerVertical="true"
         android:background="@drawable/bg"
         android:paddingLeft="16dp"
         android:paddingRight="16dp" >
@@ -145,7 +165,6 @@
             android:layout_alignBottom="@+id/operating_hour"
             android:layout_alignRight="@+id/waiting_time"
             android:text="days" />
-
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
